# g-stx-infra

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod
backend/.github/workflows/: rust.yml
backend/game-stockx-api/: Cargo.toml  diesel.toml  migrate.sh  readme.md
backend/game-stockx-api/migrations/2025-06-01-202512_create_tables/: down.sql  up.sql
backend/game-stockx-api/migrations/2025-07-05-185747_add-digital-only-flag/: down.sql  up.sql
backend/game-stockx-api/migrations/2025-07-08-211225_add-digital-only-flag-to-platform-releases/: down.sql  up.sql
backend/game-stockx-api/src/: auth.rs  chat.rs  collection.rs  main.rs  pagination.rs  platforms.rs  product.rs  register.rs  response.rs  schema.rs
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/g-stx-front/.github/workflows/: angular.yml
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/constants/: request-status.const.ts
frontend/src/app/environments/: environment.dev.ts  environment.interface.ts  environment.ts
frontend/src/app/guards/: auth.guard.ts
grafana/provisioning/: dashboards.yml
grafana/provisioning/dashboards/: api_monitoring.json
grafana/provisioning/datasources/: prometheus.yml
prometheus/: docker-compose.prod.yml  prometheus.yml  web.yml
scripts/: data-migration-local.sh  data-migrations-local.sh  init.sh  reinit-back.sh  reinit-front.sh
(+86 files in other folders)
